unpackaged/main/default/objects/Campsite_Reservation__c/Campsite_Reservation__c.object-meta.xml
<CustomObject>
    <label>Campsite Reservation</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Campsite Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campsite Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>