unpackaged/main/default/objects/Campsite_Reservation__c/fields/Campsite__c.field-meta.xml
<CustomField>
    <fullName>Campsite__c</fullName>
    <label>Campsite</label>
    <referenceTo>Campsite__c</referenceTo>
    <relationshipLabel>Campsite Reservations</relationshipLabel>
    <relationshipName>Campsite_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>