unpackaged/main/default/objects/Campsite_Reservation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Check-out date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>