unpackaged/main/default/objects/Campsite_Reservation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Check In Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>